--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Discord-RPC"]
 	path = ext/Discord-RPC
 	url = https://github.com/Hazuki-san/Discord-RPC.git
+[submodule "etx/Discord-RPC"]
+	path = etx/Discord-RPC
+	url = https://github.com/Hazuki-san/Discord-RPC.git
